--- a/lunbo1/lunbo1.html
+++ b/lunbo1/lunbo1.html
@@ -23,7 +23,7 @@
         // 轮播图片的张数(如果传入将默认为4)
         num:5,
         // 轮播图的宽度（如果不传入将默认为300）
-        itemW: 1300,
+        itemW: 400,
         // 轮播图的高度（如果不传入将默认为180）
         itemH: 500,
         // 轮播图片集合的路径（如果不上传将自动生成随机色填充）
@@ -39,7 +39,7 @@
 </html>
 <!-- 
     使用：
-    (1)调用对象Run.demo.init()函数，向函数init中传入如上述参数，参数以对象形式组织
+    (1)调用对象Run.demo.init()函数，向函数init中传入如上述参数，参数以对象形式组织,如果要传入图片路径，以数组形式组织
     (2)设置所需css样式：
         //轮播所在容器（宽高与参数itemW与itemH一致，也可不一致，主要用途用于居中，如果不需要居中也可不传入）类名可自行设置
         .content {
