添加了btn与轮播图动画的时延处理

--- a/lunbo1/lunbo1.html
+++ b/lunbo1/lunbo1.html
@@ -17,15 +17,16 @@
 </body>
 <script src="lunbo1.js"></script>
 <script>
+    console.log(Run);
     Run.demo.init({
         // 轮播图所在容器
         oWrapper:  document.querySelector(".content"),
         // 轮播图片的张数(如果传入将默认为4)
-        num:7,
+        num:4,
         // 轮播图的宽度（如果不传入将默认为300）
-        itemW: 600,
+        itemW: 500,
         // 轮播图的高度（如果不传入将默认为180）
-        itemH: 500,
+        itemH: 550,
         // 轮播图片集合的路径（如果不上传将自动生成随机色填充）
         // imgs: ["./imgs/one.jpg",
         //        "./imgs/two.jpg",
