--- a/lunbo1/lunbo1.html
+++ b/lunbo1/lunbo1.html
@@ -19,7 +19,7 @@
     Run.demo.init({
         // 轮播图所在容器
         oWrapper:  document.querySelector(".content"),
-        // 轮播图片的张数(如果传入将默认为4)
+        // 轮播图片的张数(如果不传入将默认为4)
         num:4,
         // 轮播图的宽度（如果不传入将默认为300）
         itemW: 500,
